# ebac-bookstore

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/: build.yml
.github/workflows/: heroku-deploy.yml  workflow-pullrequest.yml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
product/: factories.py  tests.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewsets/: product_viewset.py
